terms and con text align fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@ html {
 }
 @tailwind components;
 @tailwind utilities;
-@layer base { 
+@layer base {
   :root {
     --color-text: rgb(49, 49, 49); /*8d8d8d*/
     --color-light: rgb(245, 245, 245);
@@ -110,7 +110,9 @@ html {
 .fill-red-200 {
   fill: #fecaca !important;
 }
-.max-w-screen-2xl{max-width: 90%!important;}
+.max-w-screen-2xl {
+  max-width: 90% !important;
+}
 p,
 button {
   /* font-size: 18px; */
@@ -145,6 +147,24 @@ button {
 html {
   @apply text-primary;
 }
+
+.blogSingle h1, .blogSingle h2, .blogSingle h3, .blogSingle h4, .blogSingle h5, .blogSingle h6 {
+  margin-top: 32px !important;
+} 
+
+.blogSingle p {
+  font-size: 18px !important;
+  line-height: 36px !important;
+  margin-bottom: 32px !important;
+}
+
+.blogSingle iframe {
+  width: 100%;
+  height: 56.25vw;
+  max-height: calc(800px / 16 * 9);
+  margin-bottom: 32px !important;
+}
+
 /* .bannerBg{
   background-image: url('/images/homeBannerBgSurface.svg');
   background-size: contain;
